test('string-parse',
  executable('string-parse', 'string-parse.cpp', dependencies: iconfigp_dep))

test('value-parsing',
  executable('value-parsing', 'value-parsing.cpp', dependencies: iconfigp_dep))

test('dom-parsing',
  executable('dom-parsing', 'dom-parsing.cpp', dependencies: iconfigp_dep))

test('serialize',
  executable('serialize', 'serialize.cpp', dependencies: iconfigp_dep))

test('readme',
  executable('readme', 'readme.cpp', dependencies: iconfigp_dep))
